--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,18 @@
 			<version>0.6</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.puppycrawl.tools</groupId>
+			<artifactId>checkstyle</artifactId>
+			<version>6.15</version>
+		</dependency>
 
 	</dependencies>
 
@@ -62,12 +74,19 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-checkstyle-plugin</artifactId>
 			<version>2.17</version>
+			<dependencies>
+				<dependency>
+					<groupId>com.puppycrawl.tools</groupId>
+					<artifactId>checkstyle</artifactId>
+					<version>6.15</version>
+				</dependency>
+			</dependencies>
 			<executions>
 				<execution>
 					<id>validate</id>
 					<phase>validate</phase>
 					<configuration>
-						<configLocation>google_checks.xml</configLocation>
+						<configLocation>checkstyle.xml</configLocation>
 						<encoding>UTF-8</encoding>
 						<consoleOutput>true</consoleOutput>
 						<failsOnError>true</failsOnError>
